# ecommerce_grpc_rust

./: Cargo.toml  build.rs  docker-compose.yml
proto/: category.proto  helloworld.proto  product.proto
src/: main.rs  repositories.rs  server.rs  services.rs
src/repositories/: category_repository.rs  product_repository.rs  repository.rs
src/services/: category_service.rs  hello_world_service.rs  product_service.rs
