[package]
name = "ecommerce_grpc_rust"
version = "0.1.0"
authors = ["Matheus Santos <matheus.san99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4.1"
prost = "0.7.0"
tokio = {version = "1.4.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.1"
uuid = {version = "0.8.2", features = ["v4"]}
async-trait = "0.1.48"

[build-dependencies]
tonic-build = "0.4.1"